APPS-592: add xml test suites to be executed in travis - update maven surfire plugin to 3.0.0-M5