@@ -135,14 +135,11 @@
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M2</version>
+            <version>3.0.0-M5</version>
             <configuration>
-               <suiteXmlFiles>
+              <suiteXmlFiles>
                   <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                </suiteXmlFiles>
-               <argLine>
-                  --illegal-access=permit
-               </argLine>
             </configuration>
          </plugin>
 
